# Slicer_SurfaceModelNodesSelector

./: CMakeLists.txt  README.md  surfaceModel.py
SurfaceModelNodesSelector/: CMakeLists.txt  SurfaceModelNodesSelector.py
SurfaceModelNodesSelector/Resources/UI/: SurfaceModelNodesSelector.ui
